# sample_artisan

./: README.md  pyproject.toml
docs/: synthesis-roadmap.md
src/sample_artisan/: __init__.py  ai.py  cli.py  core.py  synth.py  web.py
tests/: test_ai_oscillator_unison.py  test_ai_prompt_alignment.py  test_cli_oscillator_controls.py  test_core.py  test_expanded_patch_surface.py  test_keys_engine.py  test_oscillator_source.py  test_output_polish.py  test_source_controls.py  test_synthesis_depth_controls.py  test_web_oscillator_controls.py
